# immigration-ai-system

./: .gitignore  README.md  app.py  chunks_db.pk1  main.py  pyproject.toml  requirements.txt
knowledge_base/: immigration_faq.txt
src/agent/: immigration_agent.py  knowledge_base.py
src/automations/: checklists.py  document_checklist.py  followup.py
src/database/: airtable_client.py
src/email_service/: mailer.py
src/intake/: webhook.py
